3.Made the string for api key

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_face">face</string>
     <string name="title_manga">Manga</string>
     <string name="title_sign_in">SignIn</string>
+    <string name="rapid_api_key">286a449a57msh37e9408110a0dfdp185a92jsn181ef1fa917a</string>
 </resources>
